Documentación y configuración de ParamFetcher

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -101,3 +101,6 @@ fos_rest:
 sensio_framework_extra:
     view: { annotations: false }
     router:  { annotations: true }
+
+nelmio_api_doc: 
+    name: Pictcat Api Doc
