Creados nuevos bundles: History, Comment, Content y Geo. Unidos a User tenemos todas las entidades del primer modelo de datos unidas en superentidades o grupos de entidades. Falta modificar el pattern del routing en app/config

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,19 @@
+pct_core_geo:
+    resource: "@PCTCoreGeoBundle/Resources/config/routing.yml"
+    prefix:   /
+
+pct_core_content:
+    resource: "@PCTCoreContentBundle/Resources/config/routing.yml"
+    prefix:   /
+
+pct_core_comment:
+    resource: "@PCTCoreCommentBundle/Resources/config/routing.yml"
+    prefix:   /
+
+pct_core_history:
+    resource: "@PCTCoreHistoryBundle/Resources/config/routing.yml"
+    prefix:   /
+
 pct_core_user:
     resource: "@PCTCoreUserBundle/Resources/config/routing.yml"
     prefix:   /
