--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -2,11 +2,12 @@ parameters:
     database_driver:   pdo_mysql
     database_host:     localhost
     database_port:     ~
-    database_name:     pct
-    database_user:     root
-    database_password: ~
+    database_name:     tuwih
+    database_user:     tuwih
+    database_password: chuBacca99
 
-    mailer_transport:  smtp
+    mailer
+    _transport:  smtp
     mailer_host:       localhost
     mailer_user:       ~
     mailer_password:   ~
