--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -6,8 +6,7 @@ parameters:
     database_user:     tuwih
     database_password: chuBacca99
 
-mailer:
-    _transport:  smtp
+    mailer_transport:  smtp
     mailer_host:       localhost
     mailer_user:       ~
     mailer_password:   ~
