--- a/src/PCT/Core/HistoryBundle/Resources/config/routing.yml
+++ b/src/PCT/Core/HistoryBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 pct_core_history_homepage:
-    pattern:  /hello/{name}
+    pattern:  /demo/{name}
     defaults: { _controller: PCTCoreHistoryBundle:Default:index }
