--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "nelmio/api-doc-bundle": "dev-master",
         "friendsofsymfony/user-bundle": "dev-master",
         "friendsofsymfony/rest-bundle": "dev-master",
-        "friendsofsymfony/oauth-server-bundle": "dev-master"
+        "mopa/wsse-authentication-bundle": "dev-master",
+        "sensio/buzz-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
