Quitando parameters.yml y añadiendo el .dist

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ web/uploads/*
 web/bundles/*
 
 # Configuration files
-app/config/parameters.ini
+app/config/parameters.yml
 
 # Composer
 composer.phar
