--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -2,9 +2,9 @@ parameters:
     database_driver:   pdo_mysql
     database_host:     localhost
     database_port:     ~
-    database_name:     tuwih
-    database_user:     tuwih
-    database_password: chuBacca99
+    database_name:     your_database_name 
+    database_user:     your_database_user
+    database_password: your_database_password
 
     mailer_transport:  smtp
     mailer_host:       localhost
